[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
log = "0.4"
tokio = { version = "1.29", features = ["full"] }
futures = "0.3"
itertools = "0.12"
async-trait = "0.1"
momo = "0.2"
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.10"
text_io = "0.1"
inquire = "0.6"
